# proton-xd-cli

./: .gitignore  Cargo.toml  deno.json  lib.ts  main.ts  proton-config.default.json  proton-config.json
src/: api.rs  copy_dir.rs  macros.rs  main.rs  ser.rs
src/api/: fs_api.rs  mod.rs
src/operation/: app.rs  build.rs  consts.rs  dev.rs  init.rs  mod.rs  new.rs
src/operation/config/: compiler_options.rs  config.rs  dev_options.rs  mod.rs  permission.rs  unstable.rs
src/ser/: build.rs  config.rs  consts.rs  init.rs  mod.rs  new.rs  operation.rs  writer.rs
src/ser/config/: compiler_options.rs  config.rs  mod.rs  permission.rs  to_args.rs  to_flag.rs  unstable.rs
src/tests/: main.rs  mod.rs
