[package]
name = "proton-xd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
clap = "4.4.10"
ctrlc = "3.4.1"
predicates = "3.0.4"
clap-verbosity-flag = "2.1.0"
tokio = { version = "1.34.0", features = ["full"] }
deno_core = { version = "0.234.0", features = ["include_js_files_for_snapshotting","unsafe_runtime_options"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
