[package]
name = "proton-xd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
clap = "4.4.10"
ctrlc = "3.4.1"
predicates = "3.0.4"
clap-verbosity-flag = "2.1.0"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
crossterm = { version = "0.27.0", features = ["event-stream","filedescriptor","serde","use-dev-tty"] }
prompts = "0.1.0"
requestty = { version = "0.5.0", features = ["macro","macros"] }
