[package]
name = "proton-xd-cli"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1


[dependencies]
clap = "4.4.10"
git2 = "0.18.1"
regex = "1.10.2"
requestty = "0.5.0"
crossterm = "0.27.0"
serde_json = "1.0.108"
clap-verbosity-flag = "2.1.0"
tokio = { version = "1.35.0", features = ["fs","rt","process","macros","rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }

